whereami/kubia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: kubia
  name: kubia
spec:
  replicas: 1
  selector:
    matchLabels:
      run: kubia
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: kubia
    spec:
      containers:
      - image: kubernautslabs/kubia
        name: kubia
        ports:
        - containerPort: 8080
        resources: {}
status: {}
