whereami/kubia-ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whereami
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - my.whereami.svc
    secretName: whereami-secret
  rules:
  - host: my.whereami.svc
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-headless 
          servicePort: 8080
